2009-04-30  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.8
	* Took channel save out of the main GDK thread because in Jaunty it is very slow causing UI lock-ups.
	* Added subtitle support

2009-04-25  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.7
	* Added --disable-epg-thread and --disable-epg command line options
	* Will not call screensaver poke command if empty

2009-04-24  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.6
	* Added default device option to command line
	* Scheduled recordings now have a device parameter
	* Screensaver failure message should now only show once

2009-04-15  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.5
	* Changed screensaver poke method to be a configurable command (Default: gnome-screensaver-command --poke)
	* Fixed channel persistence (LP: #361514)

2009-04-12  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.4
	* Fix for forward slashes in description (LP: #359710)

2009-04-09  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.3
	* Fixed bug where instant record was stopped because scheduled_recording_id is not being cleared

2009-04-08  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.2
	* Fix for bad EPG data collection if multiple languages
	* Fixed errors from Gentoo output

2009-04-05  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.1
	* Creating ~/.me-tv directory on startup (LP: #353796) 
	* Fix for extended EPG events so that descriptions make sense

2009-03-28  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.0
	* DVB-S support added
	* Updates to scan window UI to be more DVB-S friendly
	* Removed support for Profiles (not used)
	* Rewrote database tier so data access is more consistent
	* EPG fix where some events not displaying
	* Finally fixed mute on restore when using xine engine 
	* Added a database version check
	* Audio streams now work

2009-03-01  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.16
	* Fix so to increase the granularity of the GTK EPG widget