@@ -1,5 +1,5 @@
 .pc
-.TH "ME TV" 1 "2009-04-30" "0.8.8" "Me TV Manual"
+.TH "ME TV" 1 "2009-05-02" "0.8.8" "Me TV Manual"
 
 .SH NAME
 me-tv \- a digital television (DVB) viewer for GNOME
