@@ -1,8 +1,9 @@
-2009-04-30  Michael Lamothe <michael.lamothe@gmail.com>
+2009-05-02  Michael Lamothe <michael.lamothe@gmail.com>
 
 	* 0.8.8
 	* Took channel save out of the main GDK thread because in Jaunty it is very slow causing UI lock-ups.
 	* Added subtitle support
+	* Fixed issue with scanner reporting incorrect percentage
 
 2009-04-25  Michael Lamothe <michael.lamothe@gmail.com>
 
